...
                            <constraint firstItem="Mbr-hW-XYU" firstAttribute="trailing" secondItem="3uz-2X-vLm" secondAttribute="trailing" id="PP8-nh-Jo6"/>
                            <constraint firstItem="3uz-2X-vLm" firstAttribute="top" secondItem="Mbr-hW-XYU" secondAttribute="top" id="UkP-w4-biQ"/>
                            <constraint firstItem="3uz-2X-vLm" firstAttribute="leading" secondItem="Mbr-hW-XYU" secondAttribute="leading" id="gM0-xd-4ki"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="Mbr-hW-XYU"/>
                    </view>
                    <navigationItem key="navigationItem" title="Cool GIFs" id="4RG-Ws-txA"/>
                    <connections>
                        <outlet property="resultsCollectionView" destination="3uz-2X-vLm" id="AvJ-TK-fSm"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="YWc-1T-EtF" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
...
